--- a/slides.css
+++ b/slides.css
@@ -13,14 +13,14 @@
 body {
   line-height: 1;
   text-rendering: optimizeLegibility;
-  font-family: "Noto Sans", sans-serif;
+  font-family: arial, sans-serif;
   font-size: 3.6vh;
 }
 
 /* For some reason these don't scale, at least in Firefox 95.0.2 */
 input,
 select {
-  font-size: 1rem;
+  font-size: inherit;
 }
 
 section {
@@ -28,7 +28,7 @@ section {
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  margin: 2rem;
+  margin: 2em;
   break-after: always;
   position: relative;
   word-wrap: break-word;
@@ -43,13 +43,14 @@ section:last-child {
 }
 
 .nav {
-  margin: auto auto 0.5rem;
+  margin: auto auto 0.5em;
 }
 
 .nav a {
-  margin: 0 1rem;
+  margin: 0 1em;
   color: grey;
   font-weight: bold;
+  font-size: 3em;
 }
 
 .nav a[href] {
