--- a/slides.css
+++ b/slides.css
@@ -21,17 +21,20 @@ body {
 input,
 select {
   font-size: inherit;
+  max-width: 10em;
 }
 
-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 100vh;
-  margin: 2em;
-  break-after: always;
-  position: relative;
-  word-wrap: break-word;
+@media screen and (min-width: 900px) {
+  section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 2em;
+    break-after: always;
+    position: relative;
+    word-wrap: break-word;
+  }
 }
 
 section:first-child {
@@ -43,19 +46,26 @@ section:last-child {
 }
 
 .nav {
-  margin: auto auto 0.5em;
+  display: none;
 }
 
-.nav a {
-  margin: 0 1em;
-  color: grey;
-  font-weight: bold;
-  font-size: 3em;
-}
+@media screen and (min-width: 900px) {
+  .nav {
+    display: block;
+    margin: auto auto 0.5em;
+  }
 
-.nav a[href] {
-  color: black;
-  text-decoration: none;
+  .nav a {
+    margin: 0 1em;
+    color: grey;
+    font-weight: bold;
+    font-size: 3em;
+  }
+
+  .nav a[href] {
+    color: black;
+    text-decoration: none;
+  }
 }
 
 table {
